apps/base/projects/free-games/release/httproute.yaml
# yaml-language-server: $schema=https://ctrl-research.github.io/k8s-schemas/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: free-games-external
  annotations:
    # group: External inherited from the envoy-external gateway
    gatus.home-operations.com/enabled: "true"
spec:
  parentRefs:
  - name: envoy-external
    namespace: network
  hostnames:
  - freebies.j6n.dev
  rules:
  - backendRefs:
    - name: free-games
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: free-games-internal
  annotations:
    gatus.home-operations.com/enabled: "true"
    # sidecar defaults HTTPRoutes to https; envoy-internal is http-only
    gatus.home-operations.com/endpoint: |
      group: Self-Hosted
      url: http://free-games.j6n.internal
spec:
  parentRefs:
  - name: envoy-internal
    namespace: network
  hostnames:
  - free-games.j6n.internal
  rules:
  - backendRefs:
    - name: free-games
      port: 8080
